# pe-deal-recommender

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: evaluate.py  train.py
src/: __init__.py
src/config/: __init__.py  config.yaml  settings.py
src/data/: __init__.py  data_loader.py  datasets.py  feature_encoder.py
src/inference/: __init__.py  batch_inference.py
src/models/: __init__.py  deep_ranker.py  towers.py  two_tower.py
src/training/: __init__.py  evaluation.py  local_trainer.py  ray_trainer.py
src/utils/: __init__.py
tests/: __init__.py  test_models.py
