[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pe-deal-recommender"
version = "1.0.0"
description = "Production-grade two-stage recommender system for PE deal recommendations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "czhang165"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "faiss-cpu>=1.7.4",
    "matplotlib>=3.7.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
ray = [
    "ray[train,serve,tune]>=2.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
aws = [
    "boto3>=1.28.0",
    "s3fs>=2023.6.0",
]
all = [
    "pe-deal-recommender[ray,dev,aws]",
]

[project.scripts]
pe-train = "src.training.cli:train"
pe-serve = "src.inference.cli:serve"
pe-evaluate = "src.training.cli:evaluate"

[project.urls]
Homepage = "https://github.com/czhang165/pe-deal-recommender"
Documentation = "https://github.com/czhang165/pe-deal-recommender#readme"
Repository = "https://github.com/czhang165/pe-deal-recommender"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
